# tg-bot-movieclub

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3-journal  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/commands/: __init__.py  creating.py  getting.py  help.py  introducing.py
src/db/: db.py  db_create.sql
src/db/config/: __init__.py  db.py
src/db/migrations/: db_create.sql  db_delete.py  db_delete.sql  db_init.py  db_interaction.py
src/db/seeders/: insert_movies.py
src/db/services/: __init__.py  creating.py  deleting.py  getting.py
src/logger/: __init__.py  formatter.py  logger.py
src/utils/: __init__.py  authentication.py  callback_data_helpers.py  convert_json_to_movie.py  date_helper.py  error_handler.py  generate_paginated_html.py  hooks.py  kinopoisk.py  kinopoisk_api_call.py  movie_dto.py  parse_raw_string.py  queries.py  telegraph_init.py
