[tool.poetry]
name = "tg-bot-movieclub"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya.sereda.2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.4"
aiosqlite = "^0.19.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
