[tool.poetry]
name = "tg-bot-movieclub"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya.sereda.2001@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.black]
line-length = 79
target-version = ["py311"]
include = "\\.pyi?$"
exclude = '''
/(
  \.toml
  |\.git
  |\.ini
  |Dockerfile
)/
'''

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.4"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"
black = "^23.9.1"
pre-commit = "^3.4.0"
poethepoet = "^0.24.0"

[tool.poe.tasks]
migration.script = "src.db.migrations.db_init:init_db"
migration-revert.script = "src.db.migrations.db_delete:delete_db"
seeder.script = "src.db.seeders.insert_movies:insert"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
